@@ -1,5 +1,5 @@
 name             = DBIx-MultiStatementDo
-version          = 1.00000
+version          = 1.00009
 author           = Emanuele Zeppieri <emazep@cpan.org>
 license          = Perl_5
 copyright_holder = Emanuele Zeppieri
