@@ -5,7 +5,7 @@ package DBIx::MultiStatementDo;
 use Moose;
 use Carp qw(croak);
 
-use SQL::SplitStatement 1.00000;
+use SQL::SplitStatement 1.00009;
 
 has 'dbh' => (
     is       => 'rw',
@@ -373,18 +373,12 @@ The recognized placeholders are:
 
 =over 4
 
-=item *
+=item * I<question mark> placeholders, represented by the C<?> character;
 
-I<question mark> placeholders, represented by the C<?> character;
-
-=item *
-
-I<dollar sign numbered> placeholders, represented by the
+=item * I<dollar sign numbered> placeholders, represented by the
 C<$1, $2, ..., $n> strings;
 
-=item *
-
-I<named parameters>, such as C<:foo>, C<:bar>, C<:baz> etc.
+=item * I<named parameters>, such as C<:foo>, C<:bar>, C<:baz> etc.
 
 =back
 
