@@ -2,6 +2,10 @@ Revision history for DBIx-MultiStatementDo
 
 {{$NEXT}}
 
+* POD formatting fixes to obtain a better (automatically generated) README.mkdn.
+
+* Minimum SQL::SplitStatement required version bumped to 1.00009
+
 1.00000       2011-02-09 01:50:43 Europe/Rome
 
 * Doc updates about the new placeholders types now recognized
